Fix CSS formatting issues in FogetPasswordTemplate.module.css for improved readability and consistency.

--- a/src/component/templates/AuthPages/FogetPasswordTemplate/FogetPasswordTemplate.module.css
+++ b/src/component/templates/AuthPages/FogetPasswordTemplate/FogetPasswordTemplate.module.css
@@ -12,8 +12,8 @@
   margin-bottom: 20px; */
   height: 100vh;
   flex-direction: column;
-    gap: 45px;
-     font-family: "AventaRegular";
+  gap: 45px;
+  font-family: "AventaRegular";
 }
 
 .headingDiv {
@@ -41,7 +41,7 @@
   flex-direction: column;
   gap: 18px;
   width: 70%;
-  background-color: var( --Dark-Charcoal);
+  background-color: var(--Dark-Charcoal);
   padding: 64px;
   align-items: center;
 }
@@ -51,10 +51,20 @@
   margin-top: 20px;
 }
 
-.inputColor{color: var(--White) !important;border-radius: 0 !important;border: none !important; padding: 10px 0px !important;border-bottom: 1px solid rgba(255, 255, 255, 0.50)!important;}
-.labelColor{color: var(--White) !important;}
+.inputColor {
+  color: var(--White) !important;
+  border-radius: 0 !important;
+  border: none !important;
+  padding: 10px 0px !important;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5) !important;
+}
+.labelColor {
+  color: var(--White) !important;
+}
 
-@media(max-width:1440px){
-  .loginFormDiv {padding: 10px 64px;gap: 10px;}
-
+@media (max-width: 1440px) {
+  .loginFormDiv {
+    padding: 40px 64px;
+    gap: 10px;
+  }
 }
